# sfml-game-dev

./: .gitignore  CMakeLists.txt  aircraft.cpp  aircraft.h  aircraftmover.h  application.cpp  application.h  button.cpp  button.h  category.cpp  category.h  command.h  commandqueue.cpp  commandqueue.h  component.cpp  component.h  container.cpp  container.h  datatables.cpp  datatables.h  derivedaction.h  entity.cpp  entity.h  fontholder.h  fonts.h  game.cpp  game.h  gameoverstate.cpp  gameoverstate.h  gamestate.cpp  gamestate.h  label.cpp  label.h  layers.h  loadingstate.cpp  loadingstate.h  main.cpp  menustate.cpp  menustate.h  paralleltask.cpp  (+37 more)
mac/: Info.plist
